web/app/themes/badegg/resources/views/blocks/masthead/style.scss
@use "@styles/global/variables";
@use "@views/components/TermList/TermList";

.wp-block-badegg-podcast-title,
.wp-block-badegg-masthead {
  container-name: BlockMasthead;
  container-type: inline-size;
}

.masthead {
  &-date,
  &-prefix,
  &-terms {
    display: block;

    @container BlockMasthead (min-width: #{variables.$screen-xs}) {
      display: inline-block;
      vertical-align: middle;
    }
  }

  &-date,
  &-prefix {
    margin: 0.25em 0 0;

    @container BlockMasthead (min-width: #{variables.$screen-xs}) {
      margin: 0;
    }
  }

  &-date {
    white-space: nowrap;
  }

  &-title {
    color: variables.$white;
    margin: 0;

    @container BlockMasthead (min-width: #{variables.$screen-xs}) {
      font-size: 2.25em;
    }
  }

  &-subtitle {
    color: variables.$primary-lightest;
    margin: 0.25em 0 0;
  }

  &-terms.termlist {
    li {
      a {
        background: variables.$secondary-lighter;
        border-color: variables.$secondary-lighter;
      }

      &:hover a {
        background: variables.$primary;
        border-color: variables.$primary;
      }
    }
  }

  &-meta {
    margin: 0 0 0.5em;

    > *::before {
      display: inline-block;
      vertical-align: middle;
      margin: 0.5em;
      opacity: 0.7;
    }

    @container BlockMasthead (min-width: #{variables.$screen-xs}) {
      > *::before {
        content: '\2022';
      }

      *:first-child::before {
        content: none;
      }
    }
  }

  &-terms {
    margin: 0 0 0.5em;

    @container BlockMasthead (min-width: #{variables.$screen-xs}) {
      margin: 0;
    }
  }
}

